@@ -39,6 +39,7 @@ Improvements::
 Bug Fixes::
 
 * restore bottom margin on table with `breakable` or `unbreakable` option (#2379)
+* honor theme settings for caption on table with `breakable` or `unbreakable` option (#2379)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
